package com.example.mealplaner.Category.InterFace;

import com.example.mealplaner.Models.Meal;

import java.util.ArrayList;

public interface MealInter {
    void setMeal(ArrayList<Meal> meals);
}
